--- a/css/main.css
+++ b/css/main.css
@@ -1,16 +1,33 @@
 header {
     text-align: center;
+    font-size: 50px;
+}
+
+h1 {
+    text-align: center;
 }
 
 table {
     height: 400px;
     width: 400px;
-    margin: 200px auto;
+    margin: 100px auto;
     border-collapse: collapse;
     border-style: hidden;
     table-layout: fixed;
+    column-width: 160px;
+    
 }
 
 table td {
     border: 5px solid black;
+}
+
+td {
+    font-size: 140px;
+    text-align: center;
+    height: 160px;
+}
+
+#replay {
+    content: center;
 }
