--- a/css/main.css
+++ b/css/main.css
@@ -1,10 +1,12 @@
 header {
     text-align: center;
     font-size: 50px;
+    color: royalblue;
 }
 
 h1 {
     text-align: center;
+    color: red;
 }
 
 table {
@@ -29,5 +31,6 @@ td {
 }
 
 #replay {
-    content: center;
+    margin: 0 auto;
+    display: block;
 }
